# CPP20-masterclass

./: CMakeLists.txt  addsection.sh  gcc-11.1.cmake  main.cpp
Kattis/: CMakeLists.txt  rockband.cpp
Section10/: CMakeLists.txt  main.cpp
Section11/: CMakeLists.txt  main.cpp
Section12/: CMakeLists.txt  main.cpp
Section13/: CMakeLists.txt  main.cpp
Section14/: CMakeLists.txt  main.cpp
Section15/: CMakeLists.txt  main.cpp
Section16/: CMakeLists.txt  exercise.cpp  exercise.hpp  main.cpp
Section17/: CMakeLists.txt  exercise.cpp  exercise.hpp  main.cpp
Section18/: CMakeLists.txt  exercise.cpp  exercise.hpp  main.cpp
Section19/: CMakeLists.txt  exercise.cpp  exercise.hpp  header_only.hpp  main.cpp
Section2/: CMakeLists.txt  hello_world.cpp
Section20/: CMakeLists.txt  exercise.hpp  header_only.hpp  main.cpp
Section21/: CMakeLists.txt  exercise.hpp  main.cpp
Section22/: CMakeLists.txt  exercise.cpp  exercise.hpp  main.cpp
Section23/: CMakeLists.txt  main.cpp
Section24/: CMakeLists.txt  main.cpp
Section3/: CMakeLists.txt  main.cpp
Section5/: CMakeLists.txt  main.cpp
Section6/: CMakeLists.txt  main.cpp
Section7/: CMakeLists.txt  main.cpp
Section8/: CMakeLists.txt  main.cpp
Section9/: CMakeLists.txt  main.cpp
